@@ -192,6 +192,9 @@ Pretty Curved Privacy \- File encryption using eliptic curve cryptography.
 \&  \-y \-\-export\-yaml          Export all keys stored in your vault
 \&                            as YAML formatted text. Use \-O to put
 \&                            the export into a file.
+\&  \-b \-\-pbpcompat            Enable PBP compatibility for public key
+\&                            exports and imports.
+\&  
 \&  Encryption Options:
 \&  \-e \-\-encrypt              Asym\-Encrypt a message. Read from stdin or
 \&                            specified via \-I. Output will be written
