@@ -49,10 +49,10 @@ void pcp_listkeys();
 void pcp_exportsecret(char *keyid, int useid, char *outfile);
 void pcp_exportsecretkey(pcp_key_t *key, char *outfile);
 pcp_key_t *pcp_getrsk(pcp_key_t *s, char *recipient, char *passwd);
-void pcp_exportpublic(char *keyid, char *recipient, char *passwd, char *outfile);
+void pcp_exportpublic(char *keyid, char *recipient, char *passwd, char *outfile, int pbpcompat);
 char *pcp_normalize_id(char *keyid);
 pcp_key_t *pcp_find_primary_secret();
-int pcp_importpublic (vault_t *vault, FILE *in);
+int pcp_importpublic (vault_t *vault, FILE *in, int pbpcompat);
 int pcp_importsecret (vault_t *vault, FILE *in);
 void pcpdelete_key(char *keyid);
 char *pcp_find_id_byrec(char *recipient);
