@@ -34,7 +34,7 @@ void pcp_dumpkey(pcp_key_t *k);
 void pcp_dumppubkey(pcp_pubkey_t *k);
 
 void pcpkey_print(pcp_key_t *key, FILE *out);
-void pcppubkey_print(pcp_pubkey_t *key, FILE *out);
+void pcppubkey_print(pcp_pubkey_t *key, FILE *out, int pbpcompat);
 
 void pcpkey_printshortinfo(pcp_key_t *key);
 void pcppubkey_printshortinfo(pcp_pubkey_t *key);
